Fixed header stretching Header image now two files, logo and background Separated keyframes into file

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,7 +18,6 @@
 
 body {
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  animation: fade-in 1s;
 }
 
 div {
@@ -31,14 +30,19 @@ div {
   max-height: 400px;
 }
 
-#header #header-image {
+.header-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  background-image: url("/images/csaheader.jpg");
+  max-height: 400px;
+  padding: 50px 0;
 }
 
-#header img {
-  position: relative;
-  width: 100%;
-  max-height: 400px;
+.header-logo {
+  width: 400px;
+  height: auto;
 }
 
 #main-nav {
@@ -68,8 +72,6 @@ div {
   padding-right: 32px;
 
   background-color: #d3d3d3;
-
-  height: auto;
 }
 
 main {
@@ -87,7 +89,7 @@ main {
 
   background-color: #d3d3d3;
 
-  animation: slide-in 1s ease-in;
+  animation: slide-in 500ms ease-in;
 }
 
 #main-nav li {
@@ -105,8 +107,8 @@ ul.flex-horizontal {
   height: 100%;
   overflow: hidden;
   top: 0;
-  /*    justify-content: var(--nav-style);*/
   justify-content: center;
+  animation: fade-in 500ms;
 }
 
 ul.flex-horizontal li {
@@ -137,24 +139,4 @@ p {
   justify-content: center;
   padding: 10px;
   width: 100%;
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes slide-in {
-  from {
-    opacity: 0;
-    transform: translateY(-25%);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
